<resources>
    <string name="app_name">MovieMatch</string>

    <string name="welcome">Welcome</string>
    <string name="search">Search</string>
    <string name="search_keywords">Type keywords for films</string>
    <string name="user_name">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="unknown_error">Couldn\'t find any suggestion with the given term</string>
    <string name="how_to_search">This text tells the users how they should search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="moode">Moode</string>
    <string name="favorit">Favorit</string>
    <string name="barmi">Barmi</string>
    <string name="mood">mood</string>
    <string name="sign_in">Sign In</string>
</resources>